# taskManager

./: CMakeLists.txt  main.cpp  taskManager.pro
languages/: translation.qrc
src/: CMakeLists.txt  main.cpp
src/mainModule/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/taskModule/: CMakeLists.txt  taskdelegate.cpp  taskdelegate.h  taskeditor.cpp  taskeditor.h  taskeditor.ui  taskmodel.cpp  taskmodel.h
